crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1920x1080_render_tag_hub.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.214
  mean_reprojection_rmse: 0.0474
  p50_translation_error: 0.0003
  p90_translation_error: 0.0079
  p99_translation_error: 0.0085
  p50_rotation_error: 0.0456
  p90_rotation_error: 0.2039
  p99_rotation_error: 0.562
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.0634
