crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_3840x2160.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 474
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.0514
  mean_reprojection_rmse: 0.0707
  p50_translation_error: 0.0005
  p90_translation_error: 0.003
  p99_translation_error: 0.0311
  p50_rotation_error: 0.0427
  p90_rotation_error: 0.1259
  p99_rotation_error: 0.277
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
