crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_3840x2160_max_recall_adaptive.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 480
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.98
  mean_precision: 0.99
  mean_rmse: 0.6038
  mean_reprojection_rmse: 0.5951
  p50_translation_error: 0.0052
  p90_translation_error: 0.0451
  p99_translation_error: 0.1214
  p50_rotation_error: 0.0769
  p90_rotation_error: 0.4038
  p99_rotation_error: 1.8128
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0033_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 1
      rmse: 0.5387
