crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_3840x2160_render_tag_hub.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.1796
  mean_reprojection_rmse: 0.0491
  p50_translation_error: 0.0007
  p90_translation_error: 0.0035
  p99_translation_error: 0.0133
  p50_rotation_error: 0.0453
  p90_rotation_error: 0.1966
  p99_rotation_error: 1.3566
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
