crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_640x480_render_tag_hub.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.209
  mean_reprojection_rmse: 0.1991
  p50_translation_error: 0.0005
  p90_translation_error: 0.0022
  p99_translation_error: 0.0121
  p50_rotation_error: 0.1202
  p90_rotation_error: 0.3745
  p99_rotation_error: 0.7072
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
