crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1280x720.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.9333
  mean_reprojection_rmse: 0.8076
  p50_translation_error: 0.0035
  p90_translation_error: 0.0184
  p99_translation_error: 0.0371
  p50_rotation_error: 0.3161
  p90_rotation_error: 0.7778
  p99_rotation_error: 5.1577
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.1954
    - filename: scene_0048_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.7238
    - filename: scene_0032_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6071
    - filename: scene_0033_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.5879
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.4937
