crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_1280x720_edlines.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.96
  mean_precision: 1
  mean_rmse: 0.5915
  mean_reprojection_rmse: 0.5872
  p50_translation_error: 0.0036
  p90_translation_error: 0.0196
  p99_translation_error: 0.0377
  p50_rotation_error: 0.0924
  p90_rotation_error: 0.2485
  p99_rotation_error: 0.5626
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0005_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.0078
